# installer

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  README.md  TESTING.md  config.h.cmake  meson.build  meson_options.txt
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  issue-installing-juno.md  issue-installing-os-5.md  unreleased-installer-bug-report.md
.github/workflows/: build-deb.yml  ci.yml  gettext.yml  main.yml  release.yml
common/: DBusStructures.vala  meson.build
daemon/: AnacondaBackend.vala  Application.vala  Daemon.vala  DistinstBackend.vala  io.elementary.InstallerDaemon.conf  io.elementary.InstallerDaemon.service  meson.build
data/: Application.css  CMakeLists.txt  ProgressView.css  application.css  autostart.desktop  compositor-autostart.desktop  disk-bar-fallback.css  installer-default-settings.gschema.override  installer.appdata.xml.in  installer.desktop  installer.json  installer.metainfo.xml.in  installer.session  io.elementary.installer.desktop.in  io.elementary.installer.gresource.xml  io.elementary.installer.policy  meson.build  wingpanel-autostart.desktop  wingpanel-installer.desktop
data/gsd/: org.gnome.SettingsDaemon.MediaKeys-installer.desktop
data/os-icons/: os-icons.gresource.xml
debian/: 99elementary-installer  99pop-installer  changelog  control  copyright  io.elementary.installer-casper.install  io.elementary.installer-session.install  io.elementary.installer-session.postrm  io.elementary.installer-session.preinst  io.elementary.installer.install  lightdm.conf  pop-installer-casper.install  pop-installer-session.gsettings-override  pop-installer-session.install  rules
po/: CMakeLists.txt  LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bm.po  bn.po  br.po  bs.po  ca.po  ch.po  ckb.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  (+99 more)
po/extra/: LINGUAS  POTFILES  af.po  ak.po  ar.po  az.po  be.po  bg.po  bn.po  bs.po  ca.po  ce.po  ckb.po  cs.po  cv.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  extra.pot  fa.po  fi.po  fo.po  fr.po  fr_CA.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  ia.po  id.po  is.po  (+63 more)
session/: autostart.desktop  compositor-autostart.desktop  compositor.service.in  installer-default-settings.gschema.override  installer.desktop  installer.service.in  installer.session  installer.session.in  installer.target  meson.build  session.conf.in
session/gsd/: org.gnome.SettingsDaemon.Power-installer.desktop  org.gnome.SettingsDaemon.XSettings-installer.desktop
src/: Application.vala  CheckView.vala  Config.vala.in  HostnameValidator.vala  LanguageView.vala  MainWindow.vala  MainWindow.vala.orig  Modes.vala  Utils.vala  meson.build
src/Dialogs/: DecryptDialog.vala  EndSessionDialog.vala  HelpDialog.vala
src/DiskView/: DiskGrid.vala  DiskView.vala  org.freedesktop.udisks2.vala
src/Helpers/: Distinst.vala  Inhibitor.vala  InstallerDaemon.vala  KeyboardLayoutHelper.vala  LocaleHelper.vala  LogHelper.vala
src/Objects/: Configuration.vala  Disk.vala  InstallOptions.vala  KeyboardLayout.vala  KeyboardVariant.vala  Mount.vala  Partition.vala  PartitionTable.vala  Recovery.vala  org.freedesktop.udisks2.vala
src/Views/: AbstractInstallerView.vala  AutomatedView.vala  CheckView.vala  DecryptionView.vala  DiskView.vala  DriversView.vala  DualBootView.vala  EncryptPasswordView.vala  EncryptView.vala  EncryptedPartitionView.vala  ErrorView.vala  InstallTypeView.vala  KeyboardLayoutView.vala  LanguageView.vala  LayoutWidget.vala  OptionsView.vala  PartitioningView.vala  ProgressView.vala  RefreshNotFound.vala  RefreshOSView.vala  RefreshView.vala  SuccessView.vala  TryInstallView.vala  User.vala  VirtualMachineView.vala
src/Widgets/: DecryptMenu.vala  DescriptionRow.vala  DiskBar.vala  DiskGrid.vala  ErrorRevealer.vala  IconChooser.vala  InstallTypeGrid.vala  LayoutWidget.vala  PartitionBar.vala  PartitionBlock.vala  PartitionMenu.vala  Terminal.vala  Username.vala  VariantWidget.vala
test/: HostnameValidatorTest.vala  Test.vala  meson.build
vapi/: config.vapi  libgnomekbd.deps  libgnomekbd.vapi  libparted.vapi  libxklavier.vapi  xkbregistry.vapi
